@@ -74,7 +74,8 @@ TESTS				= check_aide
 check_PROGRAMS		= check_aide
 check_aide_SOURCES	= tests/check_aide.c tests/check_aide.h \
 					  tests/check_attributes.c src/attributes.c \
-					  src/log.c src/util.c
+					  tests/check_seltree.c src/seltree.c \
+					  src/log.c src/util.c src/list.c src/tree.c src/rx_rule.c
 check_aide_CFLAGS	= -I$(top_srcdir)/include $(CHECK_CFLAGS)
 check_aide_LDADD	= -lm ${PCRE2_LIBS} ${MHASH_LIBS} ${GCRYPT_LIBS} $(CHECK_LIBS)
 endif # HAVE_CHECK
