@@ -1,7 +1,7 @@
 /*
  * AIDE (Advanced Intrusion Detection Environment)
  *
- * Copyright (C) 1999-2002, 2006, 2010-2011, 2016, 2019-2023 Rami Lehti,
+ * Copyright (C) 1999-2002, 2006, 2010-2011, 2016, 2019-2024 Rami Lehti,
  *               Pablo Virolainen, Richard van den Berg, Hannes von Haugwitz
  *
  * This program is free software; you can redistribute it and/or
@@ -25,6 +25,7 @@
 #include <pcre2.h>
 #include "attributes.h"
 #include "rx_rule.h"
+#include "db_config.h"
 #include "seltree.h"
 struct stat;
 
